--- a/mysql-arm/mysql-storage.yaml
+++ b/mysql-arm/mysql-storage.yaml
@@ -11,7 +11,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: "/mnt/volume/mysql_files"
+    path: "/mnt/volume/data"
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
